--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,5 +1,9 @@
 <%- include("partials/header")  %>
 <div class="container mt-3">
+    <div class="row">
+    </div>
+</div>
+<div class="container mt-3">
             <div class="row">
                 <div class="col">
                     <% if(todo) {%>
@@ -9,8 +13,43 @@
                         <p>
                             <%= todo.description %>
                         </p>
+                        <hr>
+                        <hr>
+                        <h1>Modify your todo</h1>
+                        <div class="div">
+                            <form id="todoUpdateForm">
+                                <div class="mb-3">
+                                    <label for="title" class="form-label">Enter Title</label>
+                                    <input type="text" class="form-control" id="title" readonly required value="<%=todo.title%>">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="description" class="form-label">Enter Description</label>
+                                    <textarea class="form-control" id="description" rows="3"
+                                        required><%=todo.description%></textarea>
+                                </div>
+                
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="completed" id="completedDone" <%= todo.completed ? "checked" : "" %>/>
+                                    <label class="form-check-label" for="completedDone">
+                                        Mark Done
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="completed" id="completedNotDone" <%= todo.completed ? "" : "checked" %> />
+                                    <label class="form-check-label" for="completedFalse">
+                                        Not Done
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <div class="text-center">
+                                        <input class="btn btn-primary" type="submit" value="Update" />
+                                    </div>
+                                </div>
+                            </form>
+                        </div>                
                         <% } else { %>
                             <h1>Not found</h1>
+                            <a href="todos/add" class="my-1 btn btn-primary">Try adding a new todo...</a>
                         <% } %>
                 </div>
             </div>
