--- a/views/todo_add.ejs
+++ b/views/todo_add.ejs
@@ -11,8 +11,7 @@
                     <form id="todoAddTodoForm">
                         <div class="mb-3">
                             <label for="title" class="form-label">Enter Title</label>
-                            <input type="text" class="form-control" id="title"
-                                readonly required>
+                            <input type="text" class="form-control" id="title" required>
                         </div>
                         <div class="mb-3">
                             <label for="description" class="form-label">Enter
@@ -67,7 +66,7 @@
                 }
 
                 // fetch(`http://localhost:3000/api/todos/${title}`, {
-                fetch(`/api/todos/${title}`, {
+                fetch(`/api/todos/`, {
                     method: "POST",
                     // without header the request payload will be [object Object]
                     headers: {
@@ -77,13 +76,16 @@
                     body: JSON.stringify(body)
                 })
                 // fetch is a promise so need to resolve it
-                // .then((response)=>{
-                //     // console.log("PUT Response = ", response.status);
-                //     // alert(response.body)
-                //     response.json()
-                // })
                 .then((response) => response.json())
-                .then((data) => alert(data.message))
+                .then((data) => {
+                    if(data.error){
+                        const errorString = JSON.stringify(data.error)
+                        alert(errorString)
+                    }
+                    else{
+                        alert(data.message)
+                    }
+                })
                 .catch((error)=> alert(error.toString()))
             })
         </script>
