--- a/views/login.ejs
+++ b/views/login.ejs
@@ -62,6 +62,9 @@
                     }
                     else{
                         alert(data.message)
+                        
+                        // for authentication purpose
+                        localStorage.setItem("access_token", data.data.access_token)
                     }
                 })
                 .catch((error)=> alert(error.toString()))
