--- a/views/todo_add.ejs
+++ b/views/todo_add.ejs
@@ -65,26 +65,38 @@
                     completed: completedDone.checked ? true : false 
                 }
 
+                let token = localStorage.getItem("access_token")
+
                 // fetch(`http://localhost:3000/api/todos/${title}`, {
                 fetch(`/api/todos/`, {
                     method: "POST",
                     // without header the request payload will be [object Object]
                     headers: {
                         "Accept" : "application/json",
-                        "Content-type": "application/json"
+                        "Content-type": "application/json",
+                        // sending a custom key value in the headers to check it via the middleware isAuthenticated
+                        "authorization": token
                     },
                     body: JSON.stringify(body)
                 })
                 // fetch is a promise so need to resolve it
-                .then((response) => response.json())
-                .then((data) => {
-                    if(data.error){
-                        const errorString = JSON.stringify(data.error)
-                        alert(errorString)
-                    }
-                    else{
-                        alert(data.message)
-                    }
+                .then((response) => {
+                    console.log("---Token respone---", token, response.status);
+
+                    return response.json()
+                    .then((data) => {
+                        if(data.redirect){
+                            alert("You are not logged in. So redirecting you to the login page")
+                            window.location.href = "/auth/login"
+                            return
+                        }
+                        if(data.error){
+                            const errorString = JSON.stringify(data.error)
+                        }
+                        else{
+                            alert(data.message)
+                        }
+                    })
                 })
                 .catch((error)=> alert(error.toString()))
             })
