--- a/views/login.ejs
+++ b/views/login.ejs
@@ -63,7 +63,7 @@
                     else{
                         alert(data.message)
                         
-                        // for authentication purpose
+                        // --- for protected routes purpose
                         localStorage.setItem("access_token", data.data.access_token)
                     }
                 })
