--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,9 +3,10 @@
             <div class="row">
                 <div class="col">
                     <ul class="list-group">
+                        <!-- this todos is recieved from the 'get' route of view.routes.js -->
                         <% todos.forEach((todo)=> { %>
                             <li class="list-group-item d-flex justify-content-between align-items-center">
-                                <a href="/todos/<%=todo.title%>" class="btn">
+                                <a class="btn todo-title-row" style="display: block;width: 100%;text-align: left" onclick="checkAuth(`/todos/<%=todo.title%>`)">
                                     <%= todo.title %>
                                 </a>
                                 <span class="badge rounded-pill <%= todo.completed ? 'bg-success' : 'bg-danger' %>">
@@ -17,4 +18,24 @@
                 </div>
             </div>
         </div>
+
+        <script>
+            let token = localStorage.getItem("access_token")
+            
+            // console.log("auth is ", token);
+
+            function checkAuth(e){
+                // console.log("i am here", e);
+
+                if(!token){
+                    alert("You are not logged in. So redirecting you to the login page")
+                    window.location.href = "/auth/login"
+                    return
+                }
+                else{
+                    window.location.href = a
+                }
+                return
+            }
+        </script>
 <%- include("partials/footer")   %>
