--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                     return
                 }
                 else{
-                    window.location.href = a
+                    window.location.href = e
                 }
                 return
             }
