--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -6,6 +6,7 @@
 <div class="container mt-3">
             <div class="row">
                 <div class="col">
+                    <!-- this todo is obtained from index.js which in turn got from the 'get' route of view.routes.js -->
                     <% if(todo) {%>
                         <h1>
                             <%= todo.title  %>
@@ -64,6 +65,9 @@
                 const description = document.getElementById("description").value
                 const completedDone = document.getElementById("completedDone")
 
+                // for protected route purpose:
+                let token = localStorage.getItem("access_token")
+
                 // console.log("checkbox is ", completedDone.checked);
                 // console.log("checkbox is ", title.value);
                 const body = {
@@ -78,7 +82,10 @@
                     // without header the request payload will be [object Object]
                     headers: {
                         "Accept" : "application/json",
-                        "Content-type": "application/json"
+                        "Content-type": "application/json",
+                        // sending a custom key value in the headers to check it via the middleware isAuthenticated
+                        // Authorization = authorization... it is lower cased internally
+                        "Authorization": token
                     },
                     body: JSON.stringify(body)
                 })
@@ -88,8 +95,27 @@
                 //     // alert(response.body)
                 //     response.json()
                 // })
-                .then((response) => response.json())
-                .then((data) => alert(data.message))
+                .then((response) => {
+                    console.log("---Token respone---", token, response.status);
+
+                    return response.json()
+                    .then((data) => {
+                        if(data.redirect){
+                            alert("You are not logged in. So redirecting you to the login page")
+                            window.location.href = "/auth/login"
+                            return
+                        }
+                        if(data.error){
+                            const errorString = JSON.stringify(daa.error)
+                        }
+                        // successful update
+                        else{
+                            alert(data.message)
+                        }
+                    })
+                })
+                // .then((response) => response.json())
+                // .then((data) => alert(data.message))
                 .catch((error)=> alert(error.toString()))
             })
         </script>
