--- a/views/register.ejs
+++ b/views/register.ejs
@@ -68,6 +68,7 @@
                     }
                     else{
                         alert(data.message)
+                        window.location.href = "/"
                     }
                 })
                 .catch((error)=> alert(error.toString()))
