Updated try adding todo href

--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -49,7 +49,7 @@
                         </div>                
                         <% } else { %>
                             <h1>Not found</h1>
-                            <a href="todos/add" class="my-1 btn btn-primary">Try adding a new todo...</a>
+                            <a href="/todos/add" class="my-1 btn btn-primary">Try adding a new todo...</a>
                         <% } %>
                 </div>
             </div>
