--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,16 +11,16 @@
                     <form id="loginSubmitForm">
                         <div class="mb-3">
                             <label for="email" class="form-label">Enter email</label>
-                            <input type="email" class="form-control" id="email" required>
+                            <input type="email" class="form-control bg-dark text-white" id="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Enter password</label>
-                            <input type="password" class="form-control" id="password" required>
+                            <input type="password" class="form-control bg-dark text-white" id="password" required>
                         </div>
 
                         <div class="form-check">
                             <div class="text-center">
-                                <input class="btn btn-primary" type="submit"
+                                <input class="btn btn-primary bg-dark text-white" type="submit"
                                     value="Submit" />
                             </div>
                         </div>
