--- a/views/todo_add.ejs
+++ b/views/todo_add.ejs
@@ -11,12 +11,12 @@
                     <form id="todoAddTodoForm">
                         <div class="mb-3">
                             <label for="title" class="form-label">Enter Title</label>
-                            <input type="text" class="form-control" id="title" required>
+                            <input type="text" class="form-control bg-dark text-white" id="title" required>
                         </div>
                         <div class="mb-3">
                             <label for="description" class="form-label">Enter
                                 Description</label>
-                            <textarea class="form-control" id="description"
+                            <textarea class="form-control bg-dark text-white" id="description"
                                 rows="3"
                                 required></textarea>
                         </div>
