--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,15 +11,15 @@
                     <form id="registerSubmitForm">
                         <div class="mb-3">
                             <label for="name" class="form-label">Enter name</label>
-                            <input type="text" class="form-control" id="name" required>
+                            <input type="text" class="form-control bg-dark text-white" id="name" required>
                         </div>
                         <div class="mb-3">
                             <label for="email" class="form-label">Enter email</label>
-                            <input type="email" class="form-control" id="email" required>
+                            <input type="email" class="form-control bg-dark text-white" id="email" required>
                         </div>
                         <div class="mb-3">
                             <label for="password" class="form-label">Enter password</label>
-                            <input type="password" class="form-control" id="password" required>
+                            <input type="password" class="form-control bg-dark text-white" id="password" required>
                         </div>
 
                         <div class="form-check">
