--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -21,11 +21,11 @@
                             <form id="todoUpdateForm">
                                 <div class="mb-3">
                                     <label for="title" class="form-label">Enter Title</label>
-                                    <input type="text" class="form-control" id="title" readonly required value="<%=todo.title%>">
+                                    <input type="text" class="form-control bg-dark text-white" id="title" readonly required value="<%=todo.title%>">
                                 </div>
                                 <div class="mb-3">
                                     <label for="description" class="form-label">Enter Description</label>
-                                    <textarea class="form-control" id="description" rows="3"
+                                    <textarea class="form-control bg-dark text-white" id="description" rows="3"
                                         required><%=todo.description%></textarea>
                                 </div>
                 
