--- a/public/style.css
+++ b/public/style.css
@@ -20,3 +20,13 @@ li.odd {
     /* background-color: red; */
     transform: scale(1.05);
 }
+
+.todo-description{
+    font-size: x-large;
+    /* border: 1px solid white; */
+    /* display: inline; */
+    border-radius: 8px;
+}
+.edit-h1{
+    border-top: 5px solid white;
+}
