--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -11,12 +11,10 @@
                         <h1>
                             <%= todo.title  %>
                         </h1>
-                        <p>
+                        <p class="todo-description p-2 bg-secondaryy">
                             <%= todo.description %>
                         </p>
-                        <hr>
-                        <hr>
-                        <h1>Modify your todo</h1>
+                        <h1 class="edit-h1 pt-3 mt-4">&#x270E; Modify your todo</h1>
                         <div class="div">
                             <form id="todoUpdateForm">
                                 <div class="mb-3">
