--- a/views/login.ejs
+++ b/views/login.ejs
@@ -17,13 +17,9 @@
                             <label for="password" class="form-label">Enter password</label>
                             <input type="password" class="form-control bg-dark text-white" id="password" required>
                         </div>
-
-                        <div class="form-check">
-                            <div class="text-center">
-                                <input class="btn btn-primary bg-dark text-white" type="submit"
-                                    value="Submit" />
-                            </div>
-                        </div>
+                        
+                        <input class="btn btn-primary btn-lg d-block mb-3" type="submit" value="Login" />
+                        <a href="/auth/register">Register ?</a>
                     </form>
                 </div>
             </div>
