--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header")   %>
-        <div class="container mt-5">
+        <div class="container">
             <div class="row">
                 <div class="col">
                     <ul class="list-group">
