--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 </main>
 
 <footer class="w-100 border-top pt-3 bg-dark"
-style="position: fixed;left: 0;bottom: 0;width: 100%;text-align: center;">
+style="position: fixedd;left: 0;bottom: 0;width: 100%;text-align: center; margin-bottom: -20px;">
 <div class="d-lg-flex justify-content-between">
     <div class="mx-3">
         <span>TODOist</span>
