--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -1,9 +1,6 @@
 <%- include("partials/header")  %>
-<div class="container mt-3">
-    <div class="row">
-    </div>
-</div>
-<div class="container mt-3">
+
+<div class="container">
             <div class="row">
                 <div class="col">
                     <!-- this todo is obtained from index.js which in turn got from the 'get' route of view.routes.js -->
