--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,7 +19,7 @@
     ></script>
   </head>
   <body style="background-color: #0D0E10; color: white;">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
       <div class="container-fluid">
         <button
           class="navbar-toggler mb-2"
@@ -55,6 +55,6 @@
         </div>
       </div>
     </nav>
-    <main></main>
+    <!-- <main class="scroll"></main> -->
   </body>
 </html>
