--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,6 @@
 <%- include("partials/header") %>
-    <div class="container mt-3">
-        <div class="row">
-        </div>
-    </div>
-    <div class="container mt-3">
+
+    <div class="container">
         <div class="row">
             <div class="col">
                 <h1>Register yourself</h1>
