--- a/views/todo_add.ejs
+++ b/views/todo_add.ejs
@@ -1,9 +1,5 @@
 <%- include("partials/header") %>
-    <div class="container mt-3">
-        <div class="row">
-        </div>
-    </div>
-    <div class="container mt-3">
+    <div class="container">
         <div class="row">
             <div class="col">
                 <h1>Add a todo</h1>
