Updated bottom desc

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -7,7 +7,7 @@ style="position: fixedd;left: 0;bottom: 0;width: 100%;text-align: center; margin
         <span>TODOist</span>
     </div>
     <div class="copyright">
-        <p>developed and maintained by <strong>MSM</strong></p>
+        <p>&#9881; Developed and maintained by <strong>&#8499;S&#8499;</strong></p>
     </div>
     <div>
         <ul class="d-flex gap-3 list-unstyled">
