--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01" style="margin: 0 16%">
           <a class="navbar-brand h1 p-0 m-0 me-5 d-none d-lg-block" href="/">&#x2710; TODOist</a>
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item nav-item-width-1">
+            <li class="nav-item nav-item-width-1 me-2">
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item nav-item-width-1">
