--- a/public/style.css
+++ b/public/style.css
@@ -32,6 +32,10 @@ body {
   /* border: 1px solid black;  */
   border-bottom: 2px solid black;
 }
+#hi{
+  margin-top: 7%;
+  width: 300%;
+}
 footer {
   /* pushes it to the bottom of the column container. */
   margin-top: auto;
