--- a/public/style.css
+++ b/public/style.css
@@ -33,8 +33,8 @@ body {
   border-bottom: 2px solid black;
 }
 #hi{
-  margin-top: 7%;
-  width: 300%;
+  /* margin-top: 5%; */
+  width: 1000%;
 }
 footer {
   /* pushes it to the bottom of the column container. */
