--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ToDo | <%= title %></title>
     <link rel="stylesheet" href="/style.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -34,7 +36,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01" style="margin: 0 16%">
           <a class="navbar-brand h1 p-0 m-0 me-5 d-none d-lg-block" href="/">&#x2710; TODOist</a>
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <!-- removing me-auto from this ul class as didn't needed it to take the extra space -->
+          <ul class="navbar-nav me-autoo mb-2 mb-lg-0">
             <li class="nav-item nav-item-width-1 me-2">
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
@@ -42,7 +45,8 @@
               <a class="nav-link" href="/todos/add">Add</a>
             </li>
           </ul>
-          <form class="d-flex" role="search">
+          <!-- adding ms-auto class in this form as needed this right form to take the space in the right -->
+          <form class="d-flex ms-auto" role="search">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item nav-item-width-2 d-none" id="login">
                 <a class="nav-link" href="/auth/login">Login</a>
@@ -50,8 +54,8 @@
               <li class="nav-item nav-item-width-2 d-none" id="register">
                 <a class="nav-link" href="/auth/register">Register</a>
               </li>              
-              <li class="nav-item nav-item-width-3 d-none text-dark" id="hi">
-                <a class="nav-link">Hi </a>
+              <li class="nav-item nav-item-width-3 d-none text-secondary" id="hi">
+                <a class="nav-link" id="hi-anchor-tag">Hi </a>
               </li>              
               <li class="nav-item nav-item-width-2 d-none" id="logout">
                 <a class="nav-link" href="/" onclick="logOut()">Logout</a>
@@ -85,8 +89,8 @@
       document.getElementById("hi").classList.remove("d-none")
 
       var user_name = localStorage.getItem("username")
-      document.getElementById("hi").innerHTML = `
-      Hi ${user_name} | `
+      document.getElementById("hi-anchor-tag").innerHTML = `
+      <i class="bi bi-person-fill"></i> Hi ${user_name.split(" ")[0]}  `
     }
   }
   function logOut(){
