--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ToDo | <%= title %></title>
+    <title>DoneDex | <%= title %></title>
     <link rel="stylesheet" href="/style.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -35,7 +35,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01" style="margin: 0 16%">
-          <a class="navbar-brand h1 p-0 m-0 me-5 d-none d-lg-block" href="/">&#x2710; TODOist</a>
+          <a class="navbar-brand h1 p-0 m-0 me-5 d-none d-lg-block" href="/">&#x2710; DoneDex</a>
           <!-- removing me-auto from this ul class as didn't needed it to take the extra space -->
           <ul class="navbar-nav me-autoo mb-2 mb-lg-0">
             <li class="nav-item nav-item-width-1 me-2">
@@ -67,7 +67,7 @@
       <!-- Displayed when navbar is collapsed -->
       <ul class="navbar-nav d-lg-none" style="margin: 0 5%"> 
         <li class="nav-item">
-          <a class="navbar-brand h1" href="/" style="font-size: 35px;">&#x2710; TODOist</a>
+          <a class="navbar-brand h1" href="/" style="font-size: 35px;">&#x2710; DoneDex</a>
         </li>
       </ul>
     </nav>
