Changed App name

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -4,7 +4,7 @@
 style="position: fixedd;left: 0;bottom: 0;width: 100%;text-align: center; margin-bottom: -20px;">
 <div class="d-lg-flex justify-content-between">
     <div class="mx-3">
-        <span>TODOist</span>
+        <span>DoneDex</span>
     </div>
     <div class="copyright">
         <p>&#9881; Developed and maintained by <strong>&#8499;S&#8499;</strong></p>
